<resources>
    <string name="app_name">Ticketing Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="birthday">dd/mm/yyyy</string>
    <string name="postal_code">Postal code</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have an Account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="slogan">easy way to flight</string>
    <string name="started">Get Started for Flight</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="select_city">Select city</string>
    <string name="select_province">Select Province</string>
    <string name="select_country">Select Country</string>
    <string name="or">or</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="my_trip">My trip</string>
    <string name="profile">Profile</string>
    <string name="from">From</string>
    <string name="cgk">CGK</string>
    <string name="jakarta">Jakarta</string>
    <string name="to">To</string>
    <string name="flight_number">Flight Number</string>
    <string name="hn09k">HN09K</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="good_morning">Good Morning</string>
    <string name="roisul">ROISUL</string>
    <string name="hope_you_enjoy_and_have_the_best_trip">Hope you enjoy and have the best trip</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>
    <string name="airport_name">airport name</string>
    <string name="airport_code">YIA</string>
    <string name="select">Select</string>
    <string name="choose_airport">choose airport</string>
    <string name="search_flight">search flight</string>
    <string name="one_way">One-Way</string>
    <string name="departure_date">Departure Date</string>
    <string name="status_person_booking">1 Adult in Economy</string>
    <string name="departure_flight">Departure Flight</string>
    <string name="location_name">Location Name</string>
    <string name="day_date">Day, Date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="return_date">Return Date</string>
    <string name="name_class">name class</string>
    <string name="countShowTicket">1</string>
    <string name="adult">Adult</string>
    <string name="more_info">more info</string>
    <string name="flight_no">Flight No</string>
    <string name="total_passenger">Total Passenger</string>
    <string name="create_flight">Create Flight</string>
    <string name="depature_time">Depature Time</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="input_price">Input Price :</string>
    <string name="create">CREATE</string>
    <string name="flight_name">Flight: </string>
    <string name="update">UPDATE</string>
    <string name="delete">delete</string>
    <string name="admin_string">admin</string>
    <string name="name_airport">Name Airport</string>
    <string name="code_airport">Code Airport</string>
    <string name="terminal">Terminal</string>
    <string name="let_s_go">Let\'s Go</string>

    <!--  dummy country  -->
    <string-array name="country">
        <item>Saudi Arabia</item>
        <item>England</item>
        <item>United State</item>
        <item>Indonesia</item>
    </string-array>

    <!--  dummy province  -->
    <string-array name="province">
        <item>Papua</item>
        <item>Yogyakarta</item>
        <item>Jakarta</item>
        <item>Jawa Timur</item>
        <item>Sumatera Barat</item>
    </string-array>

    <!--  dummy City  -->
    <string-array name="city">
        <item>Sleman</item>
        <item>Jayapura</item>
        <item>Jakarta Selatan</item>
        <item>Surabaya</item>
        <item>Samarinda</item>
    </string-array>

    <string-array name="classType">
        <item>Business</item>
        <item>Economy</item>
    </string-array>

    <string-array name="classTypeId">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>