<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color_white"
    android:padding="30dp"
    tools:context=".view.ui.login.LoginFragment">

    <ImageView
        android:id="@+id/ivGotoBackFromLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        />
    <LinearLayout
        android:id="@+id/llLogoHeaderLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/ivGotoBackFromLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="2.5dp"
            android:src="@drawable/ic_logo_v2_blue"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginStart="2.5dp"
            android:fontFamily="@font/poppins_medium"
            />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogoHeaderLogin"
        >
        <LinearLayout
            android:id="@+id/llEditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                android:textColor="@color/primary_blue_1"
                android:fontFamily="@font/poppins_medium"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tIlEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:layout_marginBottom="25dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIetEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="example1001@gmail.com"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15sp"
                android:textColor="@color/primary_blue_1"
                android:fontFamily="@font/poppins_medium"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tIlPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIetPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="textPassword"
                    android:hint="xxxx"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnApplyLogin"
                android:layout_width="172dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="Let's Go"
                android:textAllCaps="false"
                android:elevation="@dimen/cardview_default_elevation"
                android:background="@drawable/custom_button"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/secondary_font_color"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvAuthWithGoogleLogin"
                android:layout_width="184dp"
                android:layout_height="48dp"
                app:cardCornerRadius="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="7dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_marginEnd="3.5dp"
                        android:src="@drawable/ic_logo_google"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3.5dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/login_with_google"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAuthWithAppleLogin"
                android:layout_width="184dp"
                android:layout_height="48dp"
                app:cardCornerRadius="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_marginEnd="3.5dp"
                        android:src="@drawable/ic_logo_apple"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3.5dp"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/login_with_apple"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvDontHaveAnAccountLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:layout_gravity="center"
                android:textColor="@color/primary_blue_1"
                android:fontFamily="@font/poppins_semibold"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>